--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/postor/china-bureau-statistic-administrative-division#readme",
   "dependencies": {
+    "free-http-proxy": "^1.0.1",
     "puppeteer": "^1.11.0",
     "yargs": "^12.0.5"
   }
