--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "free-http-proxy": "^1.0.1",
     "fs-extra": "^7.0.1",
+    "nedb": "^1.8.0",
     "puppeteer": "^1.11.0",
     "yargs": "^12.0.5"
   }
